--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=fb283be110760248d76a",
+    "/css/app.css": "/css/app.css?id=9afd0a03813e916d8f3a"
 }
