--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/php:8.1.0
+      - image: cimg/php:8.1.0
       - image: cimg/mysql:8.0
     environment:
       - DB_CONNECTION: mysql_test
