make config.yml for circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,9 @@ jobs:
       - checkout
 
       - run: sudo apt update
-      - run: sudo docker-php-ext-install zip
+      - run:
+          name: Docker php extensions install
+          command: sudo docker-php-ext-install pdo_mysql
 
       - restore_cache:
           keys:
