--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
       - image: cimg/php:8.1.0
       - image: cimg/mysql:8.0
     environment:
-      - DB_CONNECTION: mysql_test
+      - DB_CONNECTION: circle_test
     working_directory: ~/ci-demo
 
     steps:
