--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,9 @@ jobs:
     docker:
       - image: cimg/php:8.1.0
       - image: cimg/mysql:8.0
+        environment:
+          MYSQL_ROOT_HOST: '%'
+          MYSQL_ALLOW_EMPTY_PASSWORD: 'true'
     environment:
       - DB_CONNECTION: mysql_test
     working_directory: ~/ci-demo
