--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,9 +4,19 @@ jobs:
   build:
     docker:
       - image: cimg/php:8.1.0
+        environment:
+          APP_DEBUG: true
+          APP_ENV: testing
+          DB_CONNECTION: mysql
+          DB_DATABASE: resepj_test
+          DB_USERNAME: 'root'
+          DB_PASSWORD: ''
       - image: cimg/mysql:8.0
-    environment:
-      - DB_CONNECTION: mysql_test
+        environment:
+          MYSQL_DATABASE: testing
+          MYSQL_ROOT_HOST: '%'
+          MYSQL_ALLOW_EMPTY_PASSWORD: 'true'
+          TZ: Asia/Tokyo
     working_directory: ~/ci-demo
 
     steps:
