--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,10 +5,10 @@ jobs:
     docker:
       - image: cimg/php:8.1.0
         environment:
-          APP_DEBUG: true
           APP_ENV: testing
           DB_CONNECTION: mysql
-          DB_DATABASE: resepj_test
+          DB_HOST: 127.0.0.1
+          DB_DATABASE: testing
           DB_USERNAME: 'root'
           DB_PASSWORD: ''
       - image: cimg/mysql:8.0
