--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,14 +9,14 @@ jobs:
           DB_CONNECTION: mysql_test
           DB_HOST: 127.0.0.1
           DB_DATABASE: resepj_test
-          DB_USERNAME: 'root'
-          DB_PASSWORD: ''
+          DB_USERNAME: root
+          DB_PASSWORD: root
       - image: cimg/mysql:8.0
         environment:
-          MYSQL_DATABASE: testing
-          MYSQL_ROOT_HOST: '%'
-          MYSQL_ALLOW_EMPTY_PASSWORD: 'true'
-          TZ: Asia/Tokyo
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_DATABASE: resepj_test
+          MYSQL_USER: user
+          MYSQL_PASSWORD: passw0rd
     working_directory: ~/ci-demo
 
     steps:
